# tic-tac-toe

./: .gitignore  pyproject.toml  setup.cfg
src/: as_a_board.py  board.py  fillaction.py  gamestate.py
tests/: test_as_a_board.py  test_board.py  test_fillaction.py  test_game-state.py
