[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["eda3 <gerorin1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^4.3.21"
mypy = "^0.782"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
